--- a/src/App.css
+++ b/src/App.css
@@ -35,14 +35,22 @@ main::after {
 
 .header1 {
     display: flex;
-    justify-content: center;
     box-shadow: 0px 5px 3px 0px rgba(0,0,0,0.6);
     /* height: 125px; */
+    justify-content: center;
     width: 100%;
     background: url('https://cdn.pixabay.com/photo/2016/12/18/09/05/trees-1915244_960_720.jpg');
     background-repeat: no-repeat;
     background-size: cover;
 
+}
+
+.menu {
+  color: #3e3e3e;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  
 }
 
 .tag {
@@ -52,20 +60,29 @@ main::after {
   width: 15rem;
   max-height: 12rem;
   margin: 5px;
+  align-self: center;
 
 }
 
 .footer {
   display: flex;
-    justify-content: center;
+    justify-content: space-evenly;
     box-shadow: 0px -5px 3px 0px rgba(0,0,0,0.6);
     height: 100px;
     width: 100%;
     background: url('https://cdn.pixabay.com/photo/2016/12/18/09/05/trees-1915244_960_720.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    margin-top: 2.5rem;
+    margin-top: 2.3rem;
 
+}
+
+.footerLinks {
+
+}
+
+h3 {
+  color: #3e3e3e;
 }
 
 
@@ -244,15 +261,17 @@ button {
 }
 
 .thirdSection {
-  border: 1px solid violet;
+  /* border: 1px solid violet; */
   display: flex;
   justify-content: center;
 }
 
 .fxSection {
-  border: 1px solid lime;
+  border: 2px solid white;
+  border-radius: 7px;
   height: 15rem;
   width: 15rem;
+  margin: 1rem;
 }
 
 .fxLabel {
@@ -268,6 +287,10 @@ button {
   padding: 1rem;
 }
 
+.playbtn {
+  font-size: 6rem;
+}
+
 .transportLabel {
   color: white;
   font-weight: bold;
@@ -276,6 +299,11 @@ button {
 }
 
 @media only screen and (max-width: 600px) {
+
+  .selectorSection {
+    margin: 1rem;
+  }
+
   .chromaticPalette {
     /* border: 1px solid lime; */
     display: flex;
@@ -340,6 +368,16 @@ button {
 
   .voiceSectionLabel {
    display: none;
+  }
+
+  .transportLabel {
+ display: none;
+  }
+
+  .fxSection {
+    height: 11rem;
+    width: 10rem;
+    margin: .5rem;
   }
 
 
