--- a/src/App.css
+++ b/src/App.css
@@ -302,6 +302,7 @@ button {
 
   .selectorSection {
     margin: 1rem;
+    margin-bottom: .1rem;
   }
 
   .chromaticPalette {
@@ -351,6 +352,7 @@ button {
     display: flex;
     justify-content: center;
     margin: 15px;
+    margin-top: 5px
     
   }
   
