--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,6 @@ body {
 }
 
 main {
-  /* border: 1px solid red; */
   min-height: 86vh;
 
   margin-bottom: -100px;
@@ -45,12 +44,22 @@ main::after {
 
 }
 
-.menu {
-  color: #3e3e3e;
+.linksDiv {
+  display: flex;
+  justify-content: space-evenly;
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 15px;
+  left: 15px;
+  width: 15rem;
   
+}
+
+.headerLinksContainer {
+  margin-left: 1rem;
+}
+
+.headerLinks {
+  color: #000000;
 }
 
 .tag {
@@ -77,9 +86,24 @@ main::after {
 
 }
 
-.footerLinks {
-
+.footerLinksDiv {
+display: none;
+  
 }
+
+.copyrightContainer {
+  background-color: #3e3e3eaa;
+  max-height: 3rem;
+  margin-top: 3.5rem;
+  border-radius: 7px;
+  width: 15rem;
+}
+
+.copyright {
+  color: white;
+}
+
+
 
 h3 {
   color: #3e3e3e;
@@ -105,7 +129,6 @@ h3 {
 
 }
 .instrumentPanel {
-  /* border: 1px solid lime; */
   min-height: calc(100vh - 16.5rem);
   display: flex;
   flex-direction: column;
@@ -113,7 +136,6 @@ h3 {
 }
 
 .selectorSection {
-  /* border: 1px solid red; */
   display: flex;
   justify-content: center;
   margin: 2rem;
@@ -297,8 +319,42 @@ button {
   font-size: 1.2rem;
   align-self: center;
 }
+/* ==================================Rec Form==================================== */
+.recForm {
+  color: white;
+  text-align: center;
+  font-size: 1.7rem;
+}
+/* ===============================Gallery Setion================================ */
+.galleryContainer {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.galleryItem {
+  border: 1px solid white;
+  border-radius: 7px;
+  width: 6rem;
+  margin: .5rem;
+}
+
+.galleryTitle {
+  font-size: 1.5rem;
+  color: white;
+}
+
+.galleryAuthor {
+  font-size: 1.3rem;
+  color: white;
+}
+
 /* ================================About Section================================== */
- .aboutTitle {
+.aboutBody {
+  margin-bottom: 10rem;
+} 
+
+.aboutTitle {
    color: white;
    font-size: 3rem;
  }
@@ -317,6 +373,13 @@ button {
 
 @media only screen and (max-width: 600px) {
 
+  
+.linksDiv {
+display: none;
+  
+}
+
+  
   .selectorSection {
     margin: 1rem;
     margin-bottom: .1rem;
@@ -389,6 +452,10 @@ button {
    display: none;
   }
 
+  .thirdSection {
+    margin-bottom: 5rem;
+  }
+
   .transportLabel {
  display: none;
   }
@@ -398,6 +465,24 @@ button {
     width: 10rem;
     margin: .5rem;
   }
+
+  .footerLinksDiv {
+    /* border: 1px solid lime; */
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+    
+  }
+  
+  .footerLinksContainer {
+    /* border: 1px solid red; */
+  }
+  
+  .footerLinks {
+    color: #000000;
+  }
+
+
 
 
 
