--- a/src/App.css
+++ b/src/App.css
@@ -373,6 +373,19 @@ button {
 
 @media only screen and (max-width: 600px) {
 
+  .footer {
+    display: flex;
+    flex-direction: column;
+      justify-content: space-evenly;
+      box-shadow: 0px -5px 3px 0px rgba(0,0,0,0.6);
+      height: 100px;
+      width: 100%;
+      background: url('https://cdn.pixabay.com/photo/2016/12/18/09/05/trees-1915244_960_720.jpg');
+      background-repeat: no-repeat;
+      background-size: cover;
+      margin-top: 2.3rem;
+  
+  }
   
 .linksDiv {
 display: none;
@@ -466,8 +479,17 @@ display: none;
     margin: .5rem;
   }
 
+  .footer {
+    display: flex;
+    flex-direction: column;
+      height: 100px;
+      width: 100%;
+      margin-top: 2.3rem;
+  
+  }
+
   .footerLinksDiv {
-    /* border: 1px solid lime; */
+    border: 1px solid lime;
     display: flex;
     justify-content: space-evenly;
     width: 100%;
@@ -480,6 +502,22 @@ display: none;
   
   .footerLinks {
     color: #000000;
+  }
+
+  .copyrightContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #3e3e3eaa;
+    max-height: 2rem;
+    margin-top: 3.5rem;
+    border-radius: 7px;
+    width: 15rem;
+    margin: 0 auto;
+  }
+  
+  .copyright {
+    color: white;
   }
 
 
