--- a/src/App.css
+++ b/src/App.css
@@ -489,7 +489,7 @@ display: none;
   }
 
   .footerLinksDiv {
-    border: 1px solid lime;
+    /* border: 1px solid lime; */
     display: flex;
     justify-content: space-evenly;
     width: 100%;
