--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,7 @@ main::after {
 
 .headerLinks {
   color: #000000;
+  
 }
 
 .tag {
@@ -132,6 +133,7 @@ h3 {
   min-height: calc(100vh - 16.5rem);
   display: flex;
   flex-direction: column;
+  font-family: 'Press Start 2P', cursive;
 
 }
 
@@ -153,6 +155,7 @@ h3 {
 
 
 button {
+  font-family: 'Press Start 2P', cursive;
   margin: .3rem;
 }
 
@@ -210,7 +213,7 @@ button {
 .selectorSectionTitle {
   color: white;
   font-weight: bold;
-  font-size: 1.2rem;
+  font-size: 1rem;
   align-self: center;
   
  
@@ -278,7 +281,7 @@ button {
 .voiceSectionLabel {
   color: white;
   font-weight: bold;
-  font-size: 1.2rem;
+  font-size: 1rem;
   align-self: center;
 }
 
@@ -302,7 +305,7 @@ button {
 
 .transportSection {
   height: 10rem;
-  width: 10rem;
+  width: 12rem;
   border: 2px solid white;
   border-radius: 7px;
   margin: 1rem;
@@ -316,7 +319,7 @@ button {
 .transportLabel {
   color: white;
   font-weight: bold;
-  font-size: 1.2rem;
+  font-size: 1rem;
   align-self: center;
 }
 /* ==================================Rec Form==================================== */
