adds drop down menu and additional styles

--- a/src/App.css
+++ b/src/App.css
@@ -32,70 +32,131 @@ main::after {
   display: block;
 }
 
+.header {
+  /* display: flex;
+  flex-direction: column; */
+  position: relative;
+  height: 0px;
+  z-index: 1;
+  /* border: 1px solid yellow; */
+  /* box-shadow: 0px 5px 3px 0px rgba(0,0,0,0.6); */
+  transition: 400ms;
+}
+
+.menu-toggle-on {
+  height: 185px;
+}
+
 .header1 {
+  position: relative;
+  z-index: 4;
     display: flex;
     box-shadow: 0px 5px 3px 0px rgba(0,0,0,0.6);
-    /* height: 125px; */
+    height: 125px;
     justify-content: center;
     width: 100%;
     background: url('https://cdn.pixabay.com/photo/2016/12/18/09/05/trees-1915244_960_720.jpg');
     background-repeat: no-repeat;
     background-size: cover;
+    flex-wrap: wrap;
 
 }
 
 .linksDiv {
+  position: relative;
   display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   justify-content: space-evenly;
-  position: absolute;
-  top: 15px;
-  left: 15px;
-  width: 15rem;
+  width: 50%;
+  height: 175px;
+  margin-left: 25px;
+  z-index: 0;
+  background-color: #303030;
+  border: 2px solid white;
+  border-radius: 10px;
+  border-top: none;
+  border-top-left-radius: 1px;
+  border-top-right-radius: 1px;
   
 }
 
 .headerLinksContainer {
   margin-left: 1rem;
+  border-bottom: 1px solid rgb(255, 255, 255);
 }
 
 .headerLinks {
-  color: #000000;
-  
+  color: #ffffff;
+  font-family: 'Press Start 2P', cursive;
+  font-size: 1.3rem; 
+}
+
+.headerLinks:hover {
+  font-size: 1.5rem;
+}
+
+.menu-block {
+  display: flex;
+  justify-content: center;
+  width: 15%;
+}
+.header-menu {
+  position: relative;
+  color: #303030;
+  font-size: 3.5rem;
+  align-self: center;
+  transition: 300ms;
+  z-index: 4;
+}
+
+.header-menu:hover {
+  transform: rotate(90deg);
+  color: #ffffff;
+}
+
+.space-block {
+  width: 15%;
+}
+
+.title-block {
+  display: flex;
+  justify-content: center;
+  width: 70%;
 }
 
 .tag {
   display: flex;
-  background-color: #3e3e3e;
+  background-color: #303030;
   border-radius: 5px;
   width: 15rem;
   max-height: 12rem;
-  margin: 5px;
   align-self: center;
 
 }
 
 .footer {
   display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     box-shadow: 0px -5px 3px 0px rgba(0,0,0,0.6);
-    height: 100px;
+    min-height: 75px;
+    max-height: 75px;
     width: 100%;
     background: url('https://cdn.pixabay.com/photo/2016/12/18/09/05/trees-1915244_960_720.jpg');
     background-repeat: no-repeat;
     background-size: cover;
-    margin-top: 2.3rem;
+    margin-top: 6.3rem;
+    position: relative;
+    z-index: 4;
 
 }
 
-.footerLinksDiv {
-display: none;
-  
-}
 
 .copyrightContainer {
+  align-self: center;
   background-color: #3e3e3eaa;
   max-height: 3rem;
-  margin-top: 3.5rem;
+  /* margin-top: 3.5rem; */
   border-radius: 7px;
   width: 15rem;
 }
@@ -130,17 +191,22 @@ h3 {
 
 }
 .instrumentPanel {
+  background-color: #3e3e3e;
+  position: relative;
   min-height: calc(100vh - 16.5rem);
   display: flex;
   flex-direction: column;
   font-family: 'Press Start 2P', cursive;
+  z-index: 2;
 
 }
 
 .selectorSection {
+  position: relative;
   display: flex;
   justify-content: center;
   margin: 2rem;
+  z-index: 1;
 }
 
 
@@ -148,7 +214,6 @@ h3 {
 .paletteSwitcher {
   display: flex;
   flex-direction: column;
-  /* border: 1px solid violet; */
   margin: 5px;
   padding-top: 3rem;
 }
@@ -166,12 +231,12 @@ button {
   justify-content: center;
   margin: 15px;
   border-radius: 10px;
+  background-color: #303030;
   height: 11rem;
   width: 29rem;
 }
 
 .chromaticPalette {
-  /* border: 1px solid lime; */
   display: flex;
   flex-direction: column-reverse;
   flex-wrap: wrap;
@@ -184,6 +249,8 @@ button {
   height: 2.7rem;
   width: 2.7rem;
   margin: 5px;
+  border: 1px solid white;
+  border-radius: 2px;
 }
 
 .chromaticNotes:hover {
@@ -191,7 +258,8 @@ button {
 }
 
 .selectedColor {
-  border: 3px solid black;
+  border: 3px solid white;
+  border-radius: 2px;
   height: 2.7rem;
   width: 2.7rem;
   margin: 1rem;
@@ -219,12 +287,7 @@ button {
  
 }
 
-
-
-
-
 .voiceSection {
-  /* border: 2px solid red; */
   margin: 0 auto;
   display: flex;
   justify-content: center;
@@ -232,6 +295,7 @@ button {
 
 .voiceSetter {
   border: 2px solid white;
+  background-color: #303030;
   border-radius: 7px;
   width: 35rem;
   display: flex;
@@ -244,7 +308,6 @@ button {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  /* border: 1px solid violet; */
 }
 
 .voicePad {
@@ -252,6 +315,7 @@ button {
   width: 5rem;
   margin: 1rem 1.5rem .3rem 1.5rem;
   border: 3px outset rgb(208, 200, 184);
+  border-radius: 3px;
   transition: 600ms;
 }
 
@@ -259,14 +323,14 @@ button {
   border: none;
   width: 3rem;
   align-self: center;
-  color: rgb(223, 102, 102);
+  color: rgb(234, 74, 74);
   background-color: rgb(210, 208, 208);
   font-weight: bold;
-  transition: 400ms;
+  transition: 200ms;
 }
 
 .clearbtn:hover {
-  background-color: rgb(223, 102, 102);
+  background-color: rgba(223, 102, 102, 0.77);
 }
 
 .clearbtn:focus {
@@ -286,7 +350,6 @@ button {
 }
 
 .thirdSection {
-  /* border: 1px solid violet; */
   display: flex;
   justify-content: center;
 }
@@ -294,9 +357,10 @@ button {
 .fxSection {
   border: 2px solid white;
   border-radius: 7px;
-  height: 15rem;
+  height: 12rem;
   width: 15rem;
   margin: 1rem;
+  background-color: #303030;
 }
 
 .fxLabel {
@@ -307,6 +371,7 @@ button {
   height: 10rem;
   width: 12rem;
   border: 2px solid white;
+  background-color: #303030;
   border-radius: 7px;
   margin: 1rem;
   padding: 1rem;
@@ -329,6 +394,14 @@ button {
   font-size: 1.7rem;
 }
 /* ===============================Gallery Setion================================ */
+.gallery-block {
+  position: relative;
+  background-color: #3e3e3e;
+  z-index: 3;
+  border: 1px solid #3e3e3e;
+  font-family: 'Press Start 2P', cursive;
+}
+
 .galleryContainer {
   display: flex;
   flex-wrap: wrap;
@@ -338,17 +411,22 @@ button {
 .galleryItem {
   border: 1px solid white;
   border-radius: 7px;
-  width: 6rem;
+  width: 8.5rem;
   margin: .5rem;
+  transition: 150ms;
+}
+
+.galleryItem:hover {
+  background-color: #303030;
 }
 
 .galleryTitle {
-  font-size: 1.5rem;
+  font-size: 1rem;
   color: white;
 }
 
 .galleryAuthor {
-  font-size: 1.3rem;
+  font-size: 1rem;
   color: white;
 }
 
@@ -390,10 +468,6 @@ button {
   
   }
   
-.linksDiv {
-display: none;
-  
-}
 
   
   .selectorSection {
@@ -491,21 +565,8 @@ display: none;
   
   }
 
-  .footerLinksDiv {
-    /* border: 1px solid lime; */
-    display: flex;
-    justify-content: space-evenly;
-    width: 100%;
-    
-  }
   
-  .footerLinksContainer {
-    /* border: 1px solid red; */
-  }
-  
-  .footerLinks {
-    color: #000000;
-  }
+
 
   .copyrightContainer {
     display: flex;
