--- a/src/App.css
+++ b/src/App.css
@@ -432,21 +432,28 @@ button {
 
 /* ================================About Section================================== */
 .aboutBody {
+  position: relative;
+  z-index: 3;
+  background-color: #3e3e3e;
   margin-bottom: 10rem;
+  border: 1px solid #3e3e3e;
 } 
 
 .aboutTitle {
    color: white;
-   font-size: 3rem;
+   font-size: 2.5rem;
+   font-family: 'Press Start 2P', cursive;
  }
 
  .aboutSubHeading {
   color: white;
-  font-size: 2rem;
+  font-size: 1.5rem;
+  font-family: 'Press Start 2P', cursive;
  }
 
  .aboutParagraph {
    color: white;
+  font-size: 1.5rem;
  }
 
 
